added basic button functionality

--- a/creative_project_2/cp_2.css
+++ b/creative_project_2/cp_2.css
@@ -1,13 +1,25 @@
 body {
-  background-image: url
+  background-image: url("images/space-background.jpg")
+}
+
+h1 {
+  color: white;
+  margin-bottom: 100px;
 }
 
 .hidden {
   display: none;
 }
 
+.hidden *{
+  display: none;
+}
+
+.show-border {
+  border: 1px solid indigo;
+}
+
 #wrapper-div {
-  border: 1px solid black;
   width: 1500px;
   margin: auto;
   display: flex;
@@ -16,38 +28,43 @@ body {
   align-items: center;
 }
 
-#rules-view {
-  margin-top: 150px;
-  border: 1px solid blue;
-  background-color: lightblue;
+.view-box {
   width: 1000px;
-  border-radius: 0.3em;
+  border-radius: 0.5em;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  opacity: 0.7;
+  background-color: #6750D8;
+}
+
+#rules-view {
   align-items: center;
 }
 
 #game-view {
-  margin-top: 150px;
-  border: 1px solid red;
-  background-color: pink;
-  width: 1000px;
-  border-radius: 0.3em;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   align-items: center;
+
 }
 
 #stats-view {
-  margin-top: 150px;
-  border: 1px solid green;
-  background-color: lightgreen;
-  width: 1000px;
-  border-radius: 0.3em;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  align-items: center;
+}
 
+#game-board {
+  width: 606px;
+  height: 606px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.game-tile {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: orange; */
+  /* border: 1px solid indigo; */
 }
